--- a/spec/fixtures/vcr_cassettes/search_result_01.yml
+++ b/spec/fixtures/vcr_cassettes/search_result_01.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://cms.megaphone.fm/api/search/episodes?organizationId=STUB_ORGANIZATION_ID
+    uri: https://cms.megaphone.fm/api/search/episodes
     body:
       encoding: UTF-8
       string: 'null'
@@ -37,8 +37,8 @@ http_interactions:
       X-Content-Type-Options:
       - nosniff
       Link:
-      - "<https://cms.megaphone.fm/api/search/episodes?organizationId=STUB_ORGANIZATION_ID&page=3>;
-        rel=\"last\", <https://cms.megaphone.fm/api/search/episodes?organizationId=STUB_ORGANIZATION_ID&page=2>;
+      - "<https://cms.megaphone.fm/api/search/episodes?page=3>;
+        rel=\"last\", <https://cms.megaphone.fm/api/search/episodes?page=2>;
         rel=\"next\""
       X-Per-Page:
       - '100'
